updated to fix alignment of itmes with wishlist on category pages.

--- a/CSS files/325 Paul Davis.css
+++ b/CSS files/325 Paul Davis.css
@@ -2758,3 +2758,12 @@ table.no-border tr, table.no-border td {
     color: #000;
     text-decoration: none;
 }
+
+#pageCategory .container, #pageSearchResults .container{
+    min-height: 275px;
+}
+
+#pageCategory .text, #pageSearchResults .text{
+    min-height: 72px;
+    line-height: 17px;    
+}
